<resources>
    <string name="app_name">Combatemic</string>
    <string name="action_settings">Settings</string>
    <string name="downloading">Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="emailerror">Enter Valid Email</string>
    <string name="preference_file_key">combatemic</string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="title_activity_side_bar">SideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="statistics">Statistics</string>
    <string name="video">Video</string>
    <string name="menu_imp_contact">Important Contacts</string>
    <string name="menu_faq">FAQs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="alarm_title">Set notification time</string>
    <string name="alert_title">Set alert time</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_city_scrolling">CityScrollingActivity</string>
    <string name="fcm_token">000000000000000</string>
    <string name="title_activity_you_tube">YouTubeActivity</string>
    <string name="summary_fb">Join us on Facebook and stay up to date with everything</string>
    <string name="title_fb">Facebook</string>
    <string name="title_notification">Control Combatemic Notifications</string>
    <string name="summary_notification">Enable or Disable notifications</string>
    <string name="url_fb">https://www.facebook.com/combatemic</string>
    <string name="summary_insta">Join us on Instagram and stay up to date with everything</string>
    <string name="title_insta">Instagram</string>
    <string name="url_insta">https://www.instagram.com/combatemic?r=nametag</string>
    <string name="summary_yt">Join us on YouTube and stay up to date with everything</string>
    <string name="title_yt">YouTube</string>
    <string name="title_policy">Privacy Policy</string>
    <string name="app_version">App Version</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_yt">https://www.youtube.com/channel/UC3YZGYsDbnI03VUGhU45PFw</string>
    <string name="video_desc">Worried about the situations? \🙄
\n\n
Watch the video to know about preventive measures, symptoms and how you can stay safe. Let us know if we could answer some of your questions and comment if you want to know more.
Don\'t forget to share with your friends and family for keeping them aware.</string>
    <string name="title_activity_privacy_scrolling">PrivacyScrollingActivity</string>
    <string name="aboutus_text">
        COMBATEMIC is a team effort by a group of developers who swore to contribute for the sake of humanity and sustenance. Our mission is to fight back any life-threatening diseases and share knowledge of News and Preventives as soon as possible.
\n\n
The contribution is from “US” To HUMANITY.
\n\n
Awareness plays a key role when medicines and treatment are not on around and we here at COMBATEMIC want to provide the best knowledge of what is happening around.
\n\n
The APP aims to solve most of the problems that individuals are not used to doing and are prone to forget. We don’t believe in being scarred, we believe in the fightback. Make your life simpler and at your fingertips. We want to share this APP for the benefit of society.
\n\n
We would also like to thank Team "BTN-HashBUGS" for the Animation Videos. Heartfelt gratitude for all our users for your support and patience.


    </string>
</resources>